--- a/TTT.css
+++ b/TTT.css
@@ -48,13 +48,39 @@ button
     border-radius: 6px;
     font-weight: 1000;
     box-shadow: inset 5px 5px 10px rgba(0, 0 ,0 ,0.1);   
+    margin-left: 10px;
+}
+#color-btn
+{
+    margin-top: 130px;
+    position: absolute;
+}
+#clear-btn
+{
+    margin-top: 80px;
+    position: absolute;
 }
 
+#turn
+{
+    position: absolute;
+    margin-left: 10px;
+    text-align: center;
+    padding-top: 10px;
+    margin-top: 30px;
+    border: none;
+    height: 40px;
+    width: 120px;
+    border-radius: 6px;
+    font-weight: 1000;
+    box-shadow: inset 5px 5px 10px rgba(0, 0 ,0 ,0.1);   
+}
 
 #game-title
 {
     margin-top: 20px;
-    margin-left: 13rem;
+    /* margin-left: 28 rem; */
+    margin-left: 500px;
     position: absolute;
     height: 80px;
     width: 413px;
